test/distributions/errors/dmapRange.chpl
use BlockDist;

var Space = 1..10 dmapped Block({1..10});

