test/distributions/errors/dmapRange.good
dmapRange.chpl:3: error: 'dmapped' can currently only be applied to domains or to tuples of ranges.
